# agentic-assistant

./: README.md  main.py  pyproject.toml
assistant/email/: auth_service.py  email_assessor.py  email_response_writer.py  model.py
assistant/shared/: base_llm_service.py  graph_client.py  memory_client.py  onedrive_client.py  settings.py
